--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -23,6 +23,13 @@
           <% end %>
         <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> ADD MANUALLY </button> <%= render "add_modal" %>
       </div>
+
+<!--  BTN to proceed to order summary, on the show of routes -->
+      <%= # form_tag orders_path do %>
+        <%= hidden_field_tag 'teddy_id', @teddy.id %>
+        <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
+      <% end %> -->
+
       <hr>
   <!--   need to have different views here for login or not login-->
       <div>
