--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -44,31 +44,18 @@
   map
 </button>
 
-
-
-
-
-
-
-
-
-
-
-
-<% str = "https://www.google.com/maps/embed/v1/directions?key=AIzaSyDZHlBpRsMyKbCT8QQu2IhHHmiVswm4BLM&" %>
-
-<% locations = [] %>
-<% @user.employees.each do |employee| %>
-  <% locations << "#{employee.latitude},#{employee.longitude}|"%>
-<% end %>
-
-<%= locations %>
-
-https://maps.googleapis.com/maps/api/staticmap?path=color:0x0000ff%7Cweight:5%7C40.737102,-73.990318%7C40.749825,-73.987963%7C40.752946,-73.987384%7C40.755823,-73.986397&size=512x512&key=AIzaSyDIJ9XX2ZvRKCJcFRrl-lRanEtFUow4piM&signature=WDog7uhBuLyF26dwSv7XCsOLEj8=
-
-https://www.google.com/maps/embed/v1/directions
-  ?key=AIzaSyDZHlBpRsMyKbCT8QQu2IhHHmiVswm4BLM
-  &origin=Oslo+Norway
-  &destination=Telemark+Norway
-  &waypoint=Gransherad+Norway
-  &avoid=tolls|highways
+<script>
+  <% @route = Route.new(current_user) %>
+  setTimeout(_ => {
+    window.map.drawRoute({
+      origin: '<%= current_user.address %>',
+      destination: 'Copacabana, Rio de Janeiro',
+      waypoints: [{location: <%= @route.user.employees.where.not(latitude: nil).first.location.html_safe %>}],
+      travelMode: 'driving',
+      strokeColor: '#131540',
+      strokeOpacity: 0.6,
+      optimizeWaypoints: true,
+      strokeWeight: 6
+    });
+  }, 2000)
+</script>
