--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -161,6 +161,28 @@
   }
 }
 
+.btn-carat-go {
+  display: block;
+  width: 100%;
+  background-color: green;
+  color: white;
+  border-radius: 0px;
+  letter-spacing: 2px;
+  border: 1px solid green;
+  padding: 10px 15px;
+  font-weight: lighter;
+  opacity: 0.8;
+  margin: 10px 0;
+}
+
+.btn-carat-go:hover {
+  background-color: green;
+  color: white;
+  border-radius: 0px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  opacity: 1;
+}
 
 
 
