--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -17,13 +17,19 @@
 
         <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
 
-        <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> ADD MANUALLY </button> <%= render "add_modal" %>
+        <button type="button" class="btn-carat-go">
+          <%= link_to "Go now", employees_path %>
+        </button>
+
       </div>
       <hr>
   <!--   need to have different views here for login or not login-->
       <div>
         <!-- Button trigger modal -->
-        <h3>Employees List</h3>
+        <h3>Employees List <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> + </button> <%= render "add_modal" %></h3>
+
+
+
         <div id="employee-list">
 
           <% @employees.each do |e| %>
