--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -170,7 +170,7 @@
   letter-spacing: 2px;
   border: 1px solid green;
   padding: 10px 15px;
-  font-weight: lighter;
+  font-weight: bold;
   opacity: 0.8;
   margin: 10px 0;
 }
