--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -18,8 +18,9 @@
         <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
 
         <button type="button" class="btn-carat-go">
-          <%= link_to "Go now", employees_path %>
+          <%= link_to "GO NOW!", rewards_path %>
         </button>
+
 
       </div>
       <hr>
@@ -27,8 +28,6 @@
       <div>
         <!-- Button trigger modal -->
         <h3>Employees List <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> + </button> <%= render "add_modal" %></h3>
-
-
 
         <div id="employee-list">
 
