--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -164,7 +164,7 @@
 .btn-carat-go {
   display: block;
   width: 100%;
-  background-color: green;
+  background-color: #76AD86;
   color: white;
   border-radius: 0px;
   letter-spacing: 2px;
@@ -175,8 +175,14 @@
   margin: 10px 0;
 }
 
+.btn-carat-go a {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
 .btn-carat-go:hover {
-  background-color: green;
+  background-color: #76AD86;
   color: white;
   border-radius: 0px;
   letter-spacing: 2px;
