--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -18,7 +18,7 @@
         <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
 
         <button type="button" class="btn-carat-go">
-          <%= link_to "Go now", employees_path %>
+          <%= link_to "Save now", employees_path %>
         </button>
 
       </div>
