--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,14 +47,13 @@ body {
   margin-top: 100px;
   font-spacing: 2px;
   font-family: Sofia;
-  font-sie: 40px;
+  font-size: 40px;
   }
 }
 
 .icons {
-  margin-top: 30px;
-  height: 9vh;
-  fill: #364248;
+  height: 10vh;
+  color: red;
 }
 
 .card-text h4 {
