--- a/app/assets/stylesheets/pages/_rewards.scss
+++ b/app/assets/stylesheets/pages/_rewards.scss
@@ -7,8 +7,7 @@
     color: #364248;
     font-size: 24px;
     font-weight: bold;
-    margin-left: 30px;
-    margin-bottom: 20px;
+
   }
   p {
     margin-left: 30px;
@@ -30,14 +29,35 @@
   margin-right: -240px;
 }
 
-// .card-reward {
-//   background-color: #FBF0AC;
-//   color: #364248;
-//   padding: 20px 20px;
-//   margin: 20px 20px;
-//   i {
-//     color: #364248;
-//     font-size: 45px;
-//     padding-top: 25px;
-//   }
-// }
+.wrapper-order {
+  border-top: 1px solid #364248;
+  border-bottom: 1px solid #364248;
+  width: 100%;
+}
+
+.wrapper-summary {
+  margin-top: 20px;
+  border-top: 1px solid #364248;
+
+}
+
+.checkout-btn {
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+
+.wrapper-savings {
+  color: #76AD86;
+  font-weight: bold;
+}
+
+.title {
+  font-family: Sofia;
+  font-size: 40px;
+  margin-top: 10px;
+}
+
+.columns-order {
+
+}
+
