--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -1,60 +1,80 @@
-<div class="container">
+<div class="container content-padding">
+  <div class="card-reward text-center">
+    <div class="icon-space">
+      <div class="icon-circle">
+        <%= image_tag "piggy-bank.svg", class:"icons text-center" %>
+      </div>
+    </div>
 
-  <div class="row">
-    <div class="wrapper-cards">
+    <h3 class="text-center title">Your Savings with Carat</h3>
+    <div class="card-text savings">
+      <div class="wrapper-summary">
 
-      <div class="col-xs-12 col-sm-4 col-md-4">
-        <div class="card-reward text-center">
-          <%= image_tag "piggy-bank.svg", class:"icons text-center" %>
+        <div class="row">
+          <div class="col-xs-6">
+            <h4 class="text-left">You actual cost</h4>
+          </div>
 
-          <div class="card-text">
-            <h3><strong>$ 40,000</strong></h3>
-            <h4 class="how-heading">Economy</h4>
+          <div class="col-xs-6">
+            <h3 class="text-right"> $40,000</h3>
           </div>
         </div>
-      </div>
 
-      <div class="col-xs-12 col-sm-4 col-md-4">
-        <div class="card card-reward text-center">
-          <%= image_tag "stopwatch.svg", class:"icons text-center" %>
+        <div class="row">
+          <div class="col-xs-6">
+            <h4 class="text-left">Your cost with Carat</h4>
+          </div>
 
-          <div class="card-text">
-            <h3><strong>10,000h</strong></h3>
-            <h4 class="how-heading">Time Saved</h4>
+          <div class="col-xs-6">
+            <h3 class="text-right"> $20,000</h3>
           </div>
         </div>
-      </div>
 
-      <div class="col-xs-12 col-sm-4 col-md-4">
-        <div class="card card-reward text-center">
-         <%= image_tag "footprint.svg", class:"icons text-center" %>
+        <div class="row">
+          <div class="wrapper-savings">
+            <div class="col-xs-6">
+              <h4 class="text-left"><strong>You Saved</strong></h4>
+            </div>
 
-          <div class="card-text">
-            <h3><strong>5 tons</strong></h3>
-            <h4 class="how-heading">Carbon Footprint</h4>
+            <div class="col-xs-6">
+              <h3 class="text-right"> $20,000</h3>
+            </div>
           </div>
         </div>
+
       </div>
+    </div>
+  </div>
+
+  <div class="wrapper-order text-center">
+
+    <div class="row">
+
+        <div class="col-xs-12 col-md-3 col-sm-3">
+          <h4><strong>Company Details</strong></h4>
+          <p> Derka Company</p>
+        </div>
+
+        <div class="col-xs-12 col-md-3 col-sm-3">
+          <h4><strong>Order Number</strong></h4>
+          <p>DRF0R4</p>
+        </div>
+
+        <div class="col-xs-12 col-md-3 col-sm-3">
+          <h4><strong>Payment Type</strong></h4>
+          <p>Credit Card</p>
+        </div>
+
+        <div class="col-xs-12 col-md-3 col-sm-3">
+          <h4><strong>TOTAL</strong></h4>
+          <p><strong>$300 BRL</strong></p>
+        </div>
 
     </div>
   </div>
 
-  <hr>
-
-  <div class="row">
-    <div class="order-summary">
-
-      <div class="col-xs-12 col-sm-6 box-right">
-        <h3>Company Name</h3>
-        <p><i class="fas fa-map-marker-alt"></i>Street Something, 34 - Rio de Janeiro 22220-909</p>
-        <p><i class="fas fa-envelope"></i>company@email.com</p>
-      </div>
-
-      <div class="col-xs-12 col-sm-6 box-left">
-        <button type="button" class="btn-carat-regular">PROCEED TO ORDER</a>
-      </div>
-
-    </div>
+  <div class="row checkout-btn">
+     <button type="button" class="btn-carat-regular">PROCEED TO ORDER</a>
   </div>
 </div>
 
